navbar fixed top

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
     background-color:#da70d6 ;
 }
 .bg-shoes-categories{
-background-color: #0000ff;
+background-color: #5757d8;
 }
 .panda-btn-background{
      color: white;
